[tool.poetry]
name = "yawfinfo"
version = "0.1.0"
description = "Linux alternative to wfinfo"
authors = ["Brandon Johnson <brandon82890@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
opencv-python = "^4.6.0"
mss = "^6.1.0"
requests = "^2.28.1"
pandas = "^1.4.3"
pytesseract = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
